@@ -7,18 +7,21 @@ from UserDict import DictMixin
 from Acquisition import aq_base, aq_inner, aq_parent
 from AccessControl import ClassSecurityInfo, getSecurityManager
 from AccessControl.Permissions import copy_or_move
+from AccessControl.Permissions import access_contents_information
 from Globals import InitializeClass
 from OFS.CopySupport import CopyError, _cb_decode, _cb_encode, cookie_path
 from OFS.CopySupport import copy_re
 from OFS.event import ObjectWillBeMovedEvent, ObjectWillBeRemovedEvent
 from OFS.event import ObjectClonedEvent
 from OFS.Moniker import Moniker, loadMoniker
-from OFS.ObjectManager import checkValidId
+from OFS.ObjectManager import checkValidId, BadRequestException
 from zExceptions import BadRequest, Unauthorized
 from ZODB.POSException import ConflictError
+from webdav.Collection import Collection
 
 from zope.event import notify
-from zope.interface import implements
+from zope.interface import implements, Interface
+from zope.component import queryMultiAdapter
 from zope.app.container.contained import notifyContainerModified
 from zope.app.container.contained import ObjectMovedEvent, ObjectRemovedEvent
 from zope.lifecycleevent import ObjectCopiedEvent
@@ -35,9 +38,12 @@ from Products.Reflecto.interfaces import IReflectoDirectory
 from Products.Reflecto.interfaces import ILifeProxy
 from Products.Reflecto.interfaces import IReflectoProxy
 from Products.Reflecto.interfaces import IReflector
-from Products.Reflecto.content.proxy import BaseProxy
+from Products.Reflecto.content.proxy import BaseProxy, BaseMove
 from Products.Reflecto.content.file import ReflectoFile
 from Products.Reflecto.utils import addMarkerInterface
+
+from ZPublisher import xmlrpc
+from webdav.NullResource import NullResource
 
 def _getViewFor(context):
         return context.reflector_view
@@ -78,7 +84,7 @@ class ReflectoDirectoryBase:
 
     # IReadContainer implementation based on DictMixin
     def __getitem__(self, key):
-        if not self.has_key(key):
+        if not self.has_key(key):            
             raise KeyError(key)
         
         filename = os.path.join(self.getFilesystemPath(), key)
@@ -134,7 +140,69 @@ class ReflectoDirectoryBase:
         for k in self.__iter__():
             yield (k, self[k])
     
+########################################################################
+# ObjectManager implementation
+    security.declareProtected(access_contents_information,
+                              'objectIds')
+    def objectIds(self, spec=None):
+        # Returns a list of subobject ids of the current object.
+        # If 'spec' is specified, returns objects whose meta_type
+        # matches 'spec'.
+        assert spec is None, 'spec argument unsupported'
+        return self.__iter__()
+
+
+    security.declareProtected(access_contents_information,
+                              'objectValues')
+    def objectValues(self, spec=None):
+        # Returns a list of actual subobjects of the current object.
+        # If 'spec' is specified, returns only objects whose meta_type
+        # match 'spec'.
+        assert spec is None, 'spec argument unsupported'
+        return self.itervalues()
+
+
+    security.declareProtected(access_contents_information,
+                              'objectItems')
+    def objectItems(self, spec=None):
+        # Returns a list of (id, subobject) tuples of the current object.
+        # If 'spec' is specified, returns only objects whose meta_type match
+        # 'spec'
+        assert spec is None, 'spec argument unsupported'
+        return self.iteritems()
+
+########################################################################
+# WebDAV implementation
+
+    def MKCOL_handler(self,id,REQUEST=None,RESPONSE=None):
+        """
+            Handle WebDAV MKCOL.
+        """
+        if not self.acceptableFilename(id):
+            raise BadRequestException, ('The id "%s" is invalid.' % id)
+        path = os.path.join(self.getFilesystemPath(), id)
+        os.mkdir(path, 0775)
+
+        dir = self.aq_inner[id]
+        dir.indexObject()
     
+    def _checkId(self, id, allow_dup=0):
+        if not allow_dup and self.has_key(id):
+            raise BadRequestException, ('The id "%s" is invalid--'
+                                        'it is already in use.' % id)
+        if not self.acceptableFilename(id):
+            raise BadRequestException, ('The id "%s" is invalid.' % id)
+    
+    def _verifyObjectPaste(self, obj):
+        assert isinstance(obj, BaseProxy)
+        prefix = os.path.commonprefix((obj.getFilesystemPath(),
+                                       self.getFilesystemPath()))
+        if prefix == obj.getFilesystemPath():
+            raise CopyError, "This object cannot be pasted into itself"
+        sman = getSecurityManager()
+        if not sman.checkPermission(AddFilesystemObject, self):
+            raise CopyError, 'Insufficient Privileges'
+     
 ########################################################################
 # IConstrainTypes implementation
 
@@ -157,7 +225,7 @@ class ReflectoDirectoryBase:
 # Deletion support
 
     security.declareProtected(DeleteObjects, 'manage_delObjects')
-    def manage_delObjects(self, ids=[]):
+    def manage_delObjects(self, ids=[], REQUEST=None):
         """Delete reflected files or directories
         
         The objects specified in 'ids' get deleted. This emulates the
@@ -202,7 +270,7 @@ class ReflectoDirectoryBase:
             indexview.index()
             notifyContainerModified(self)
         
-        return list(set(ids) - set(problem_ids))
+        return problem_ids or None # None expected by webdav on success
     
 ########################################################################
 # Renaming support
@@ -413,7 +481,7 @@ for m in ('__contains__', 'iterkeys', 'itervalues', 'values', 'items', 'get'):
     
 InitializeClass(ReflectoDirectoryBase)
 
-class ReflectoDirectory(ReflectoDirectoryBase, BaseProxy, DynamicType):
+class ReflectoDirectory(ReflectoDirectoryBase, BaseMove, Collection, BaseProxy, DynamicType):
     """A filesystem directory."""
 
     meta_type = "ReflectoDirectory"
@@ -448,6 +516,64 @@ class ReflectoDirectory(ReflectoDirectoryBase, BaseProxy, DynamicType):
         """ Returns the default view even if index_html is overridden.
         """
         return self()
-
+    
+    def __bobo_traverse__(self, REQUEST, name):
+        try:
+            return self[name]
+        except KeyError:
+            pass
+            
+        if hasattr(aq_base(self), name):
+            return getattr(self, name)
+        
+        # webdav
+        method = REQUEST.get('REQUEST_METHOD', 'GET').upper()
+        if (method not in ('GET', 'POST') and not
+              isinstance(REQUEST.RESPONSE, xmlrpc.Response) and
+              REQUEST.maybe_webdav_client and not REQUEST.path):
+            return ReflectoNullResource(self, name, REQUEST).__of__(self)
+        
+        # try to find a view
+        subobject = queryMultiAdapter((self, REQUEST), Interface, name)                
+        if subobject is not None:
+            return subobject.__of__(self)
+        
+        # finally try acquired objects
+        return getattr(self, name)
 
 InitializeClass(ReflectoDirectory)
+
+
+class ReflectoNullResource(NullResource):
+    security = ClassSecurityInfo()
+    
+    security.declarePublic('PUT')
+    def PUT(self, REQUEST, RESPONSE):
+        """Create a new non-collection resource.
+        """
+        from ZServer import LARGE_FILE_THRESHOLD
+
+        self.dav__init(REQUEST, RESPONSE)
+
+        name = self.__name__
+        parent = self.__parent__
+
+        # Locking not implemented.
+        
+        if not self.acceptableFilename(name):
+            raise BadRequestException, ('The id "%s" is invalid.' % name)
+        
+        path = parent.getPathToReflectoParent() + (name,)
+        obj = ReflectoFile(path).__of__(parent)
+
+        if self.getReflector().getLife():
+            addMarkerInterface(obj, ILifeProxy)
+        
+        # Security is checked here.
+        obj.PUT(REQUEST, RESPONSE)
+
+        RESPONSE.setStatus(201)
+        RESPONSE.setBody('')
+        return RESPONSE
+    
+InitializeClass(ReflectoNullResource)
